# mocqa-messenger

./: README.md  docker-compose.yml  package-lock.json
backend/: .gitignore  Dockerfile  alembic.ini  auth.py  database.py  main.py  models.py  pyproject.toml  utils.py  websocket.py
backend/alembic/versions/: 50ffda311919_detect_reply_content.py  bece89caef09_add_reply_content_column_to_message.py
backend/routes/: chats.py  messages.py  users.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/api/: api.ts
frontend/src/components/: ChatWindow.tsx  ChatsPanel.tsx  FloatAlert.tsx  Header.tsx  Loader.tsx
frontend/src/context/: AlertContext.tsx
frontend/src/hooks/: useSocket.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/routes/: AppRoutes.tsx
